# bolide-settings

./: CMakeLists.txt  bolide-settings.desktop.template  bolide-settings.in
data/: bolide-settings.service
i18n/: bolide-settings.ace.qm  bolide-settings.ace.ts  bolide-settings.ar.qm  bolide-settings.ar.ts  bolide-settings.ast.qm  bolide-settings.ast.ts  bolide-settings.az.qm  bolide-settings.az.ts  bolide-settings.be.qm  bolide-settings.be.ts  bolide-settings.bqi.qm  bolide-settings.bqi.ts  bolide-settings.ca.qm  bolide-settings.ca.ts  bolide-settings.ckb.qm  bolide-settings.ckb.ts  bolide-settings.cs.qm  bolide-settings.cs.ts  bolide-settings.da.qm  bolide-settings.da.ts  bolide-settings.de_DE.qm  bolide-settings.de_DE.ts  bolide-settings.el.qm  bolide-settings.el.ts  bolide-settings.en_GB.qm  bolide-settings.en_GB.ts  bolide-settings.eo.qm  bolide-settings.eo.ts  bolide-settings.es.qm  bolide-settings.es.ts  bolide-settings.es_AR.qm  bolide-settings.es_AR.ts  bolide-settings.fa.qm  (+87 more)
src/: CMakeLists.txt  main.cpp  resources.qrc
src/qml/: AboutPage.qml  AutomationEditPage.qml  BatteryHistoryGraph.qml  CompactListItem.qml  DatePage.qml  DisplayPage.qml  LanguagePage.qml  LauncherPage.qml  NightstandPage.qml  NightstandWatchfacePage.qml  PageTitle.qml  PowerManagerPage.qml  PowerPage.qml  ProfileEditPage.qml  ProfileListPage.qml  ProfileSelectorPage.qml  QuickPanelPage.qml  SnapListView.qml  SoundPage.qml  Theme.qml  ThemePage.qml  ThemedSlider.qml  TimePage.qml  TimezonePage.qml  USBPage.qml  UnitsPage.qml  WallpaperPage.qml  WatchfacePage.qml  main.qml
(+2 files in other folders)
